# pico-tone-trixter

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  main.c  main.cpp  openocd.cfg
audio/: dsp.cpp  es8388.cpp  es8388.h  es8388_test.cpp  offline_test.cpp  passthrough_test.cpp  pcm1808_test.cpp  pipeline.cpp  pipeline.h
docs/: ir_capture_guide.md  wiring.md
docs/posts/2026-04-can-a-7-dollar-chip-sound-like-a-300-dollar-mic/: post.md  social.md
i2s/: i2s.c  i2s.h  i2s_in.pio  i2s_in_slave.pio  i2s_out.pio
lib/FFTConvolver/: AudioFFT.cpp
tools/: capture_wav.py  gen_audio_arrays.py  gen_perf_graphic.py  validate_ir.py
